Confirm Actions and Invalid Actions buttons exist in player combatant rows from the GM's perspective.

--- a/css/mg-block-initiative.css
+++ b/css/mg-block-initiative.css
@@ -1,4 +1,4 @@
-.mg-block-initiative .reaction {
+.mg-block-initiative .mg-reaction, .mg-invalid-action, .mg-confirm-action{
     color: var(--color-text-light-1);
 }
 
